--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.21.1",
     "babel-eslint": "10.x",
     "classnames": "^2.3.1",
-    "eslint": "6.x",
+    "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "4.x",
     "eslint-plugin-import": "2.x",
@@ -60,5 +60,9 @@
   },
   "devDependencies": {
     "@react-spring/web": "^9.2.4"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/JarGonn71/yarn_shop_pizza.git",
+  "author": "Kirill",
+  "license": "MIT"
 }
